--- a/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
+++ b/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-    //"DefaultConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;MultipleActiveResultSets=true;" 
+    "DefaultConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+    //"DefaultConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;" 
   }
 }
