--- a/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
+++ b/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
@@ -7,7 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;"
-    //"DefaultConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;" 
+
+    "MSSQLConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+    "MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
+
+    // For your DB (change Username, Psw & Port)
+    //"MSSQLConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+    //"MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
   }
 }
