--- a/LearningManagementSystem/LearningManagementSystem.Domain/LearningManagementSystem.Domain.csproj
+++ b/LearningManagementSystem/LearningManagementSystem.Domain/LearningManagementSystem.Domain.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\LearningManagementSystem.DataBase\LearningManagementSystem.DataBase.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+  </ItemGroup>
+
 </Project>
