feat: add some features

--- a/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
+++ b/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
@@ -8,11 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "MSSQLConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;",
-    "MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
+    //"MSSQLConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+    //"MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
 
     // For your DB (change Username, Psw & Port)
-    //"MSSQLConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+    "MSSQLConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa@123;TrustServerCertificate=True;MultipleActiveResultSets=true;"
     //"MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
   }
 }
