--- a/LearningManagementSystem/LearningManagementSystem.Domain/LearningManagementSystem.Domain.csproj
+++ b/LearningManagementSystem/LearningManagementSystem.Domain/LearningManagementSystem.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LearningManagementSystem.DataBase\LearningManagementSystem.DataBase.csproj" />
   </ItemGroup>
 
