--- a/LearningManagementSystem/LearningManagementSystem.Domain/LearningManagementSystem.Domain.csproj
+++ b/LearningManagementSystem/LearningManagementSystem.Domain/LearningManagementSystem.Domain.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="8.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.11" />
   </ItemGroup>
 
   <ItemGroup>
