feat: add AppSettings for authorization of Users

--- a/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
+++ b/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "J308WPwyh3D/r8AQ9lug0A+5pKPmgL0Mz52Iz62TBHo=",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,11 +13,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    //"MSSQLConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+    "MSSQLConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;"
     //"MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
 
     // For your DB (change Username, Psw & Port)
-    "MSSQLConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa@123;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+    //"MSSQLConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa@123;TrustServerCertificate=True;MultipleActiveResultSets=true;"
     //"MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
   }
 }
