feat: add Authorization to Endpoints

--- a/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
+++ b/LearningManagementSystem/LearningManagementSystem.Api/appsettings.json
@@ -12,12 +12,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-
-    "MSSQLConnection": "Server=MSI\\SQLEXPRESS2022;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa;TrustServerCertificate=True;MultipleActiveResultSets=true;"
-    //"MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
-
-    // For your DB (change Username, Psw & Port)
-    //"MSSQLConnection": "Server=.;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sasa@123;TrustServerCertificate=True;MultipleActiveResultSets=true;"
-    //"MySQLConnection": "Server=localhost;Port=3306;Database=learningmanagementsystems;User Id=root;Password=sasa;"
+    "MSSQLConnection": "Server=.\\SQLEXPRESS;Initial Catalog=LearningManagementSystem;User ID=sa;Password=sa;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+    "MySQLConnection": "Server=localhost;;Database=learningmanagementsystems6;User Id=root;Password=night;"
   }
 }
